tests/ui/macros/not-utf8-bin-file.rs
fn main() {
    let _ = "Á|Õ!5¢ccŒÓ";
    //~^ ERROR stream did not contain valid UTF-8
}
